# weeek2

./: README.md  pyproject.toml
data/processed/: _run_meta.json  analytics_table.parquet  orders.parquet  orders_clean.parquet  users.parquet
notebooks/: eda.ipynb  test.ipynb
python_scripts/: run_day1_load.py  run_day2_clean.py  run_day3_build_analytics.py
reports/: missingness_order.csv  revenue_by_country.csv
src/bootcamp_data/: config.py  io.py  joins.py  quality.py  transforms.py
