[project]
name = "week-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "pandas>=2.3.3",
    "pyarrow",
    "httpx",
    "plotly>=6.5.0",
    "kaleido>=1.2.0",
    "nbformat>=5.10.4",
    "notebook>=7.5.1",
    "jupyterlab>=4.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["src/bootcamp_data"]
